@@ -1,8 +1,15 @@
+django_codenerix_email (4.0.48) stable; urgency=low
+
+  * Example corrected in management command
+
+ -- Juanmi Taboada <juanmi@juanmitaboada.com>  Tue, 06 Feb 2026 12:01:00 +0200
+
+
 django_codenerix_email (4.0.47) stable; urgency=low
 
   * Max retries is not considered in emails_send management command
 
- -- Juanmi Taboada <juanmi@juanmitaboada.com>  Tue, 03 Feb 2026 12:20:00 +0200
+ -- Juanmi Taboada <juanmi@juanmitaboada.com>  Tue, 06 Feb 2026 11:53:00 +0200
 
 
 django_codenerix_email (4.0.46) stable; urgency=low
